<resources>
    <string name="app_name">Weather</string>
    <string name="title_detailed_weather">Detailed Weather</string>
    <string name="title_settings">Settings</string>

    <string name="geographical_coordinates">Geographical Coordinates</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="city">city</string>
    <string name="submit">Submit</string>

    <string name="by_latitude_longitude">By Latitude &amp; Longitude</string>
    <string name="by_city">By City</string>
    <string name="no_city_selected">No City Selected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>