<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".ui.weather.WeatherFragment">

    <RadioGroup
        android:id="@+id/mainRadioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:measureWithLargestChild="false"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/backGroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <RadioButton
            android:id="@+id/latitude_longitude_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:minHeight="@dimen/custom_radio_button_height"
            android:text="@string/by_latitude_longitude"
            android:textColor="@color/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/city_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:minHeight="@dimen/custom_radio_button_height"
            android:text="@string/by_city"
            android:textColor="@color/radio_flat_text_selector"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/backGroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainRadioButton"
        app:layout_constraintVertical_bias="0.03">

        <EditText
            android:id="@+id/latitude_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/latitude"
            android:inputType="numberSigned|numberDecimal"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"/>

        <EditText
            android:id="@+id/longitude_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/longitude"
            android:inputType="numberSigned|numberDecimal"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"/>
    </LinearLayout>

    <EditText
        android:id="@+id/city_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainRadioButton"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/submit"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.02"
        android:textColor="@color/submitButtonTextColor"
        android:background="@color/submitButtonbackGroundColor"/>

    <TextView
        android:id="@+id/city_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backGroundColor"
        android:gravity="center"
        android:text="@string/no_city_selected"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecast_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/backGroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_info"
        android:textColor="@color/textColor"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@color/backGroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_info"
        android:textColor="@color/textColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>